--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.source>17</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <exec.mainClass>dad.holamundo.Main</exec.mainClass>
     </properties>
 
     <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
